[+] header, nav mobile style

--- a/index.html
+++ b/index.html
@@ -34,6 +34,14 @@
     <div class="inner">
 
       <ul class="menu">
+        <li class="menu-starter">
+          <a class="menu-s">
+            <div class="menu-s">
+              <span class="menu-s"></span>
+              <span class="menu-s"></span>
+            </div>
+          </a>
+        </li>
         <li class="apple-logo"><a href="javascript:void(0)">Apple</a></li>
         <li><a href="javascript:void(0)">스토어</a></li>
         <li><a href="javascript:void(0)">Mac</a></li>
@@ -69,10 +77,10 @@
       <div class="search-wrap">
         <div class="search">
           <div class="shadow"></div>
-          <div class="textfield">
-            <input type="text" placeholder="apple.com 검색" />
-            <div class="search-icon"></div>
-            <div class="search-closer"></div>
+          <div class="textfield m-search">
+            <input class="m-search" type="text" placeholder="apple.com 검색" />
+            <div class="search-icon m-search"></div>
+            <div class="search-closer m-search"></div>
           </div>
           <div class="search-canceler">취소</div>
           <div class="autocompletes">
@@ -88,6 +96,20 @@
         </div>
       </div>
 
+      <div class="clone-menu">
+        <ul>
+          <li><a href="javascript:void(0)">스토어</a></li>
+          <li><a href="javascript:void(0)">Mac</a></li>
+          <li><a href="javascript:void(0)">iPad</a></li>
+          <li><a href="javascript:void(0)">iPhone</a></li>
+          <li><a href="javascript:void(0)">Watch</a></li>
+          <li><a href="javascript:void(0)">AirPods</a></li>
+          <li><a href="javascript:void(0)">TV 및 홈</a></li>
+          <li><a href="javascript:void(0)">Apple 독점 제공</a></li>
+          <li><a href="javascript:void(0)">액세서리</a></li>
+          <li><a href="javascript:void(0)">고객지원</a></li>
+        </ul>
+      </div>
     </div>
   </header>
 
