[+] 이미지 상대경로로 변경, footer 포폴 멘트 추가

--- a/index.html
+++ b/index.html
@@ -768,6 +768,9 @@
         </div>
 
         <div class="how-to-shop">
+          <p>해당 사이트는 포트폴리오용으로 실제 운영되는 사이트가 아닙니다.</p>
+          <br />
+
           다양한 쇼핑 방법:
           <a href="javascript:void(0)">Apple Store</a>를 방문하거나,
           <a href="javascript:void(0)">리셀러</a>를 찾아보거나, 080-330-8877번으로 전화하세요.
